2003-07-07  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b46
	
	* Implemented a slightly modified patch by Jonathan Larmour, to
	  include jpegtran support.

2003-07-07  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b45
	
	* Change the text printed when an installation has warnings.
	  This is based on some experiences from the forum, where users
	  have been scared to go on when their installation just has a
	  minor warning

2003-07-05  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b44

	* Bug fix.  Number of custom fields as defined in
	  extra_fields.php is incorrect when there is no "Title"
	  field.

2003-07-04  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b43

	* added a function definition of array_search for compatibility with
	  PHP 4.0.4

2003-07-02  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b42

	* Wrapped realpath around __FILE__.  Hopefully this fixes a bug where
	  __FILE__ is set to file name and not path in included files for 
	  some versions of PHP 

2003-06-30  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b41

	* bug fix: if you are album and item owner, edit text etc will only
	  appear in pull down menu once, and edit thumbnail and rotate options
	  do not appear for movies.

2003-06-30  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b40
	
	* added new custom field EXIF data. This displays exif data
	  under the photo, but nly if data is available, and can be
	  displayed in that album.  Photo properties link is removed
	  if the data is displayed under photo.

	* made an array  "automatic fields" which is capture date,
	  upload date and EXIF.  These are custom fields that are
	  populated from exif data etc.  Should make translations a
	  little easier, too.


2003-06-29  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b39

	* Augmented AlbumItem upgrade so that it scans for the "nobody" owner
	  as well as for a missing owner altogether.
