@@ -40,9 +40,9 @@ if (!$gallery) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.3.5-cvs-b46";
-$gallery->config_version = 38;
-$gallery->album_version = 12;
+$gallery->version = "1.3.5-cvs-b47";
+$gallery->config_version = 39;
+$gallery->album_version = 13;
 $gallery->remote_protocol_version = 1;
 $gallery->url = "http://gallery.sourceforge.net";
 
