@@ -1,3 +1,13 @@
+2003-07-08  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b47
+
+	* Added the option to put new items at the beginning of an album.
+
+	* Little tweak to upgrade, so if you go back and forth
+	  between item_owner and pre-item_owner versions, you keep
+	  item_owner details intact.
+
+	* Add "new in 1.3.5" to jpegtran stuff.
+
 2003-07-07  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b46
 	
 	* Implemented a slightly modified patch by Jonathan Larmour, to
